Updated Web API

--- a/AzureFinalAssignment - Backup/PublishSubscribeWebAPI/PublishSubscribeWebAPI.csproj
+++ b/AzureFinalAssignment - Backup/PublishSubscribeWebAPI/PublishSubscribeWebAPI.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <StartupObject>PublishSubscribeWebAPI.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.0.0" />
   </ItemGroup>
+
 
 </Project>
