--- a/AzureFinalAssignment - Backup/EmailSubscriber/EmailSubscriber.csproj
+++ b/AzureFinalAssignment - Backup/EmailSubscriber/EmailSubscriber.csproj
@@ -1,12 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.0.0" />
   </ItemGroup>
 
